--- a/silverwallets.kv
+++ b/silverwallets.kv
@@ -35,19 +35,27 @@ SignUpScreen:
             multiline: False
             on_text_validate: root.on_text_validate_pw(self)
         Label:
-            text: "Set a expenditure limit you want to meet in a month"
+            text: "Monthly Expenditure Limit:"
             color: 0,0,0,1
+            size_hint: 1,0.23
         TextInput:
             hint_text: "Enter amount in SGD"
             multiline: False
             input_filter: "float"
             on_text_validate: root.on_text_validate_target(self) 
+        Label:
+            text: root.status_info
+            color: 0.5,0,0,1
+            size_hint: 1, 0.23
         Button:
+
             text: "CONFIRM"
             color: 0,0,0,1     
             background_normal: ''
             background_color: 0.3, 0.9, 0.1, .85
-            on_released: 
+            on_press: 
+                root.signup_to_firebase()
+
 <MainWidget>:
     Button:
         text: "Sign Up"
