--- a/silverwallets.kv
+++ b/silverwallets.kv
@@ -121,15 +121,25 @@ WindowManager:
 <HomeScreen>
     name: "home"
     BoxLayout:
+        id: box
+        size_hint_y: .8
+    FloatLayout:
+        
+        BoxLayout:
+            Label:
+                text: "Tips"
+                color: 0,0,0.7,1    
         AnchorLayout:
             
             anchor_x: 'left'
             anchor_y: 'top'
             Label:
-                size_hint: 1,None
+                size_hint: .35, .05
                 text: root.welcome_text
+                text_size: cm(3), cm(3)
                 font_size: "50"
                 color: 0, 0, 0.3, 1
+
         AnchorLayout:
             anchor_x: 'right'
             anchor_y: 'top'
