--- a/silverwallets.kv
+++ b/silverwallets.kv
@@ -1,4 +1,5 @@
 WindowManager:
+<WindowManager>
     id: window_manager
     StartScreen
     LogInScreen
@@ -10,6 +11,9 @@ WindowManager:
     CameraScreen
     PostCameraScreen
     ManualInputScreen
+<Graph>
+
+    
 <StartScreen>
     name: "start"
     BoxLayout:
@@ -121,14 +125,15 @@ WindowManager:
 <HomeScreen>
     name: "home"
     BoxLayout:
-        id: box
-        size_hint_y: .8
+        orientation: "vertical"
+        Graph
+        Label:
+            text: "Tips"
+            color: 0,0,0.7,1
+            size_hint: None, 0.2
+
     FloatLayout:
-        
-        BoxLayout:
-            Label:
-                text: "Tips"
-                color: 0,0,0.7,1    
+
         AnchorLayout:
             
             anchor_x: 'left'
