added postCam screen and essential receipt info validation

--- a/silverwallets.kv
+++ b/silverwallets.kv
@@ -331,16 +331,30 @@ WindowManager:
     name: "postCam"
     on_enter:
         root.on_enter()
+    AnchorLayout:
+        anchor_x: "left"
+        anchor_y: "top"
+        Button:
+            text: "back"
+            size_hint: 0.3, 0.05
+            on_press:
+                app.root.current = "camera"
+                root.manager.transition.direction = "right"
     BoxLayout:
+        orientation: "vertical"
         Label:
             text: "Receipt Info"
             color: 0.1,0.7,0.7,1
         Label:
             text: root.merchantInfo
             color: 0,0,0,1
+            text_size: self.width, None
+            
         Label:
             text: root.merchantAddress
             color: 0,0,0,1
+            text_size: self.width, None
+            
         Label:
             text: root.date
             color: 0,0,0,1
@@ -359,4 +373,47 @@ WindowManager:
         Label:
             text: root.category
             color: 0,0,0,1
+        GridLayout:
+            cols: 3
+            rows: 2
+            Button:
+                text: "Water Bill"
+                background_normal: ''
+                background_color: 0.15, 0.47, 0.9, .85
+                on_press: 
+                    root.tag = "water"
+
+
+            Button:
+                id: elec
+                text: "Electric Bill"
+                background_normal: ''
+                background_color: 0.96, 0.8, 0.15, .85
+                on_press: root.tag = "electric"
+            Button:
+                text: "Essentials"
+                background_normal: ''
+                background_color: 0.67, 0.8, 0.69, .85
+                on_press: root.tag = "essentials"
+            Button:
+                text: "Rent"
+                background_normal: ''
+                background_color: 0.93, 0.32, 0.32, .85
+                on_press: root.tag = "rent"
+            Button:
+                text: "Food"
+                background_normal: ''
+                background_color: 0.9, 0.65, 0.35, .85
+                on_press: root.tag = "food"
+            Button:
+                text: "Extras"
+                background_normal: ''
+                background_color: 0.3, 0.2, 0.7, .85
+                on_press: root.tag = "extras"
+
+        Button:
+            text: "submit"
+            background_normal: ''
+            background_color: 0.3, 0.9, 0.1, .85
+            on_press: root.submitData()
 <MainWidget>:
