--- a/silverwallets.kv
+++ b/silverwallets.kv
@@ -11,6 +11,7 @@ WindowManager:
     CameraScreen
     PostCameraScreen
     ManualInputScreen
+    SettingScreen
 <Graph>
 
     
@@ -20,20 +21,31 @@ WindowManager:
         orientation: "vertical"
         Label:
             text: "SilverWallets"
-            color: 1,0,1,1
+            color: 0,0,0,1
             size_hint: 1, .2
+            font_name: "ProductSansBold"
+            font_size: 50
+            
         BoxLayout:
             orientation: "vertical"
             spacing: 50
             padding: 100
             Button:
+                background_normal: ''
+                background_color: 0.85, 0.85, 0.85, .85
                 text: "Sign Up"
+                color: 0,0,0,1
+                font_name: "ProductSansBold"
                 id: signUp
                 on_release: 
                     app.root.current = "signup"
                     root.manager.transition.direction = "left"
             Button: 
+                background_normal: ''
+                background_color: 0.85, 0.85, 0.85, .85
                 text: "Log In"
+                color: 0,0,0,1
+                font_name: "ProductSansBold"
                 id: logIn
                 on_release: 
                     app.root.current = "login"
@@ -46,20 +58,25 @@ WindowManager:
             Label:
                 text: "Log In"
                 color: 0,0,1,1
+                font_name: "ProductSansBold"
             TextInput:
                 hint_text: "Enter email"
+                font_name: "ProductSans"
                 multiline: False
                 on_text_validate: root.on_text_validate_email(self)
             TextInput:
                 hint_text: "Enter password"
+                font_name: "ProductSans"
                 multiline: False
                 on_text_validate: root.on_text_validate_pw(self)
             Label:
                 text: root.status_info
                 color: 0.5,0,0,1
                 size_hint: 1, 0.23
+                font_name: "ProductSansBold"
             Button:
                 text: "CONFIRM"
+                font_name: "ProductSansBold"
                 color: 0,0,0,1     
                 background_normal: ''
                 background_color: 0.3, 0.9, 0.1, .85
@@ -70,6 +87,7 @@ WindowManager:
             anchor_y: 'top'
             Button:
                 text: "Go Back"
+                font_name: "ProductSansBold"
                 size_hint: .15, .05
                 
                 on_release: 
@@ -83,21 +101,26 @@ WindowManager:
             Label:
                 text: "Sign Up"
                 color: 1,0,1,1
+                font_name: "ProductSansBold"
             TextInput:
                 id: signUpText
                 hint_text: "Enter email"
+                font_name: "ProductSans"
                 multiline: False
                 on_text_validate: root.on_text_validate_email(self)
             TextInput:
                 hint_text: "Enter password"
+                font_name: "ProductSans"
                 multiline: False
                 on_text_validate: root.on_text_validate_pw(self)
             Label:
                 text: "Monthly Expenditure Limit:"
                 color: 0,0,0,1
                 size_hint: 1,0.23
+                font_name: "ProductSansBold"
             TextInput:
                 hint_text: "Enter amount in SGD"
+                font_name: "ProductSans"
                 multiline: False
                 input_filter: "float"
                 on_text_validate: root.on_text_validate_target(self) 
@@ -105,6 +128,7 @@ WindowManager:
                 text: root.status_info
                 color: 0.5,0,0,1
                 size_hint: 1, 0.23
+                font_name: "ProductSansBold"
             Button:
 
                 text: "CONFIRM"
@@ -118,6 +142,7 @@ WindowManager:
             anchor_y: 'top'
             Button:
                 text: "Go Back"
+                font_name: "ProductSansBold"
                 size_hint: .15, .05
                 on_release: 
                     app.root.current = "start"
@@ -131,6 +156,7 @@ WindowManager:
             text: "Tips"
             color: 0,0,0.7,1
             size_hint: None, 0.2
+            font_name: "ProductSansBold"
 
     FloatLayout:
 
@@ -142,16 +168,20 @@ WindowManager:
                 size_hint: .35, .05
                 text: root.welcome_text
                 text_size: cm(3), cm(3)
-                font_size: "47"
+                font_size: "45"
                 color: 0, 0, 0.3, 1
+                font_name: "ProductSansBold"
 
         AnchorLayout:
             anchor_x: 'right'
             anchor_y: 'top'
             Button:
                 text: "Settings"
+                font_name: "ProductSansBold"
                 size_hint: .35, .05
-                on_press: root.switch_tab
+                on_press:
+                    app.root.current = "setting"
+                    app.root.transition.direction = "left"
 <NavigationScreen>
     
     name: "navigate"
@@ -181,7 +211,8 @@ WindowManager:
             anchor_y: "top"
             Button:
                 text: "back"
-                size_hint: 0.3, 0.05
+                font_name: "ProductSansBold"
+                size_hint: 0.3, 0.1
                 on_press: 
                     camera.play = not camera.play
                     app.root.current = "navigate"
@@ -193,15 +224,17 @@ WindowManager:
         Label:
             text: root.status_info
             color: 0,0,0,1
+            font_name: "ProductSansBold"
         AnchorLayout:
             anchor_x: "center"
             anchor_y: "bottom"
             Button:
                 text: "capture"
+                font_name: "ProductSansBold"
                 on_press: 
                     root.capture()
                     
-                size_hint: 0.5, 0.1
+                size_hint: 0.5, 0.2
                 
 
 <InputScreen>
@@ -210,18 +243,22 @@ WindowManager:
         orientation: "vertical"
         Label: 
             text: "Input Data"
+            font_name: "ProductSans"
             color: 0.1, 0.1, 0.7,1
+            font_name: "ProductSansBold"
         BoxLayout:
             
             orientation: "horizontal"
             Button:
                 text: "Enter Manually"
+                font_name: "ProductSansBold"
                 on_press:
                     app.root.current = "manual"
                     app.root.transition.direction = "left"
                 
             Button: 
                 text: "Scan Receipt"
+                font_name: "ProductSansBold"
                 on_press: 
                     app.root.current = "camera"
                     app.root.transition.direction = "left"
@@ -233,8 +270,10 @@ WindowManager:
         Label:
             text: "Manual Input"
             color: 0.2,0.5,0.3,1
+            font_name: "ProductSansBold"
         TextInput:
             hint_text: "Enter your expenditure (SGD)"
+            font_name: "ProductSans"
             multiline: False
             on_text_validate: root.text_field_amount(self)
             size_hint: 1, 0.4
@@ -243,15 +282,18 @@ WindowManager:
             size_hint: 1, 0.22
             Button:
                 text: "pick date"
+                font_name: "ProductSans"
                 on_press: root.showDatePicker()
             Label:
                 text: root.date_label
                 color: 0.3, 0.3, 0.3, 1
+                font_name: "ProductSansBold"
         GridLayout:
             cols: 3
             rows: 2
             Button:
                 text: "Water Bill"
+                font_name: "ProductSansBold"
                 background_normal: ''
                 background_color: 0.15, 0.47, 0.9, .85
                 on_press: 
@@ -262,26 +304,31 @@ WindowManager:
             Button:
                 id: elec
                 text: "Electric Bill"
+                font_name: "ProductSansBold"
                 background_normal: ''
                 background_color: 0.96, 0.8, 0.15, .85
                 on_press: root.tag = "electric"
             Button:
                 text: "Essentials"
+                font_name: "ProductSansBold"
                 background_normal: ''
                 background_color: 0.67, 0.8, 0.69, .85
                 on_press: root.tag = "essentials"
             Button:
                 text: "Rent"
+                font_name: "ProductSansBold"
                 background_normal: ''
                 background_color: 0.93, 0.32, 0.32, .85
                 on_press: root.tag = "rent"
             Button:
                 text: "Food"
+                font_name: "ProductSansBold"
                 background_normal: ''
                 background_color: 0.9, 0.65, 0.35, .85
                 on_press: root.tag = "food"
             Button:
                 text: "Extras"
+                font_name: "ProductSansBold"
                 background_normal: ''
                 background_color: 0.3, 0.2, 0.7, .85
                 on_press: root.tag = "extras"
@@ -290,8 +337,10 @@ WindowManager:
             text: root.status_info
             size_hint: 1, 0.23
             color: 0.2,0.2,0,1
+            font_name: "ProductSansBold"
         Button:
             text: "Submit"
+            font_name: "ProductSansBold"
             background_normal: ''
             background_color: 0.3, 0.9, 0.1, .85
             on_press: root.submitData()
@@ -303,6 +352,7 @@ WindowManager:
             anchor_y: "top"
             Button:
                 text: "back"
+                font_name: "ProductSansBold"
                 size_hint:0.3, 0.05
                 on_press:
                     app.root.current = "navigate"
@@ -314,6 +364,7 @@ WindowManager:
     spacing: 40
     padding:10, 10
     space_x: self.size[0]
+
     RecycleBoxLayout:
         color:(0, 0.7, 0.4, 0.8)
         default_size: None, dp(56)
@@ -324,9 +375,7 @@ WindowManager:
 <HistoryScreen>
     History
     BoxLayout:
-        Label:
-            text: "History"
-            color: 0,0.3,0,1
+
 <PostCameraScreen>
     name: "postCam"
     on_enter:
@@ -336,6 +385,7 @@ WindowManager:
         anchor_y: "top"
         Button:
             text: "back"
+            font_name: "ProductSansBold"
             size_hint: 0.3, 0.05
             on_press:
                 app.root.current = "camera"
@@ -345,39 +395,49 @@ WindowManager:
         Label:
             text: "Receipt Info"
             color: 0.1,0.7,0.7,1
+            font_name: "ProductSansBold"
         Label:
             text: root.merchantInfo
             color: 0,0,0,1
             text_size: self.width, None
+            font_name: "ProductSansBold"
             
         Label:
             text: root.merchantAddress
             color: 0,0,0,1
             text_size: self.width, None
+            font_name: "ProductSansBold"
             
         Label:
             text: root.date
             color: 0,0,0,1
+            font_name: "ProductSansBold"
         Label:
             text: root.time
             color: 0,0,0,1
+            font_name: "ProductSansBold"
         Label:
             text: root.amount
             color: 0,0,0,1
+            font_name: "ProductSansBold"
         Label:
             text: root.tax
             color: 0,0,0,1
+            font_name: "ProductSansBold"
         Label:
             text: root.payMeth
             color: 0,0,0,1
+            font_name: "ProductSansBold"
         Label:
             text: root.category
             color: 0,0,0,1
+            font_name: "ProductSansBold"
         GridLayout:
             cols: 3
             rows: 2
             Button:
                 text: "Water Bill"
+                font_name: "ProductSansBold"
                 background_normal: ''
                 background_color: 0.15, 0.47, 0.9, .85
                 on_press: 
@@ -387,26 +447,31 @@ WindowManager:
             Button:
                 id: elec
                 text: "Electric Bill"
+                font_name: "ProductSansBold"
                 background_normal: ''
                 background_color: 0.96, 0.8, 0.15, .85
                 on_press: root.tag = "electric"
             Button:
                 text: "Essentials"
+                font_name: "ProductSansBold"
                 background_normal: ''
                 background_color: 0.67, 0.8, 0.69, .85
                 on_press: root.tag = "essentials"
             Button:
                 text: "Rent"
+                font_name: "ProductSansBold"
                 background_normal: ''
                 background_color: 0.93, 0.32, 0.32, .85
                 on_press: root.tag = "rent"
             Button:
                 text: "Food"
+                font_name: "ProductSansBold"
                 background_normal: ''
                 background_color: 0.9, 0.65, 0.35, .85
                 on_press: root.tag = "food"
             Button:
                 text: "Extras"
+                font_name: "ProductSansBold"
                 background_normal: ''
                 background_color: 0.3, 0.2, 0.7, .85
                 on_press:
@@ -415,10 +480,53 @@ WindowManager:
         Label:
             text: root.tag
             color: 0.2,0.2,0,1
+            font_name: "ProductSansBold"
 
         Button:
             text: "submit"
+            font_name: "ProductSansBold"
             background_normal: ''
             background_color: 0.3, 0.9, 0.1, .85
             on_press: root.submitData()
+<SettingScreen>
+    name: "setting"
+    FloatLayout:
+        AnchorLayout:
+            anchor_x: 'left'
+            anchor_y: 'top'
+            
+            Button:
+                text: "back"
+                font_name: "ProductSansBold"
+                size_hint: .15, .05
+                on_press: 
+                    app.root.current = "navigate"
+                    root.manager.transition.direction = "right"
+        BoxLayout:
+            spacing: 90
+            padding: 150
+            orientation: "vertical"
+            Button:
+                background_normal: ''
+                background_color: 0.81, 0.81, 0.81, .85
+                text: "Log Out"
+                font_name: "ProductSansBold"
+                color: 1,0.1,0.1,1
+                size_hint: 1, .2
+                
+            Button:
+                background_normal: ''
+                background_color: 0.81, 0.81, 0.81, .85
+                text: "Delete Account"
+                font_name: "ProductSansBold"
+                color: 1,0.1,0.1,1
+                size_hint: 1, .2
+            Button:
+                background_normal: ''
+                background_color: 0.81, 0.81, 0.81, .85
+                text: "Info"
+                font_name: "ProductSansBold"
+                color: 0.4,0.4,1,1
+                size_hint: 1, .2
+
 <MainWidget>:
