--- a/silverwallets.kv
+++ b/silverwallets.kv
@@ -278,6 +278,7 @@ WindowManager:
             color: 0.2,0.5,0.3,1
             font_name: "ProductSansBold"
         TextInput:
+            id: amt
             hint_text: "Enter your expenditure (SGD)"
             font_name: "ProductSans"
             multiline: False
@@ -363,24 +364,57 @@ WindowManager:
                 on_press:
                     app.root.current = "navigate"
                     root.manager.transition.direction = "right"
-
+<SelectableLabel>:
+    # Draw a background to indicate selection
+    canvas.before:
+        Color:
+            rgba: (.0, 0.9, .1, .3) if self.selected else (0, 0, 0, 1)
+        Rectangle:
+            pos: self.pos
+            size: self.size
+<RV>:
+    viewclass: 'SelectableLabel'
+    SelectableRecycleBoxLayout:
+        default_size: None, dp(56)
+        default_size_hint: 1, None
+        size_hint_y: None
+        height: self.minimum_height
+        orientation: 'vertical'
+        multiselect: True
+        touch_multiselect: True
 <History>
-    viewclass: 'Button'  # defines the viewtype for the data items.
+    
+    viewclass: 'SelectableLabel'  # defines the viewtype for the data items.
     orientation: "vertical"
     spacing: 40
     padding:10, 10
     space_x: self.size[0]
 
-    RecycleBoxLayout:
+    SelectableRecycleBoxLayout:
         color:(0, 0.7, 0.4, 0.8)
         default_size: None, dp(56)
         default_size_hint: 1, None 
         size_hint_y: None
         height: self.minimum_height
         orientation: 'vertical' 
+        multiselect: True
+        touch_multiselect: True
+
+        
 <HistoryScreen>
-    History
-    BoxLayout:
+    FloatLayout:
+        History
+        AnchorLayout
+            anchor_y: 'bottom'
+            size_hint: 1, .1
+            Button:
+                text: 'REMOVE'
+                on_press: root.remove()
+                font_name: "ProductSansBold"
+                background_normal: ''
+                background_color: 1, 0.1, 0.1, .85
+
+    
 
 <PostCameraScreen>
     name: "postCam"
@@ -432,10 +466,6 @@ WindowManager:
             font_name: "ProductSansBold"
         Label:
             text: root.payMeth
-            color: 0,0,0,1
-            font_name: "ProductSansBold"
-        Label:
-            text: root.category
             color: 0,0,0,1
             font_name: "ProductSansBold"
         GridLayout:
