--- a/silverwallets.kv
+++ b/silverwallets.kv
@@ -13,7 +13,7 @@ WindowManager:
     PostCameraScreen
     ManualInputScreen
     SettingScreen
-<Graph>
+<MLGraph>
 
     
 <StartScreen>
@@ -157,9 +157,9 @@ WindowManager:
     name: "home"
     BoxLayout:
         orientation: "vertical"
-        Graph
+        MLGraph
         Label:
-            text: "Tips"
+            text: root.status_info
             color: 0,0,0.7,1
             size_hint: None, 0.2
             font_name: "ProductSansBold"
